[package]
name = "kubesly"
authors = "Tatu Pesonen"
version = "0.1.0"
edition = "2021"
description = "Simple management of Kubernetes secrets"
readme = "README.md"
repository = "https://github.com/tatupesonen/kubesly"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kube = { version = "0.76.0", features = ["derive", "runtime"] }
